--- a/index.html
+++ b/index.html
@@ -29,11 +29,45 @@
 			<img src="img/guy.png" alt="It's me" >
 		</div>
 	</header>
-	<div class="Aboutme">
-		
+	<div class="Aboutme" data-animate>
+		<h1>About me</h1>
+		<p>Hi, I'm Denis – UX/UI designer from Minsk.<br> I'm interested in design and everything connected with it.</p>
+		<p>I'm studying at courses "Web and mobile design<br> interfaces" in IT-Academy.</p>
+		<p>Ready to implement excellent projects<br> with wonderful people.</p>
 	</div>
 	<div class="Skills">
-
+		<h1>Skills</h1>
+		<p>I work in such programs as</p>
+		<ul class="base">
+			<li>
+				<ul class="Skillbox" data-animate>
+					<li><img src="img/Ps.png" alt="photoshop"></li>
+					<li><p>Adobe<br>Photoshop</p></li>
+					<li><img src="img/4star.png" alt="4 stars"></li>
+				</ul>
+			</li>
+			<li>
+				<ul class="Skillbox" data-animate>
+					<li><img src="img/Ai.png" alt="Illustartor"></li>
+					<li><p>Adobe<br>Illustrator</p></li>
+					<li><img src="img/3star.png" alt="3 stars"></li>
+				</ul>
+			</li>
+			<li>
+				<ul class="Skillbox" data-animate>
+					<li><img src="img/Ae.png" alt="After effects"></li>
+					<li><p>Adobe<br>After Effects</p></li>
+					<li><img src="img/4star.png" alt="4 stars"></li>
+				</ul>
+			</li>
+			<li>
+				<ul class="Skillbox" data-animate>
+					<li><img src="img/Figma.png" alt="Figma"></li>
+					<li><p>Figma<br><br></p></li>
+					<li><img src="img/4star.png" alt=" 4 stars"></li>
+				</ul>
+			</li>
+		</ul>
 	</div>
 <script src="script.js"></script>
 </body>
