Add footer and portfolio. Finish the site

--- a/index.html
+++ b/index.html
@@ -41,34 +41,69 @@
 		<ul class="base">
 			<li>
 				<ul class="Skillbox" data-animate>
+					<div class="active">
 					<li><img src="img/Ps.png" alt="photoshop"></li>
 					<li><p>Adobe<br>Photoshop</p></li>
 					<li><img src="img/4star.png" alt="4 stars"></li>
+					</div>
 				</ul>
 			</li>
 			<li>
 				<ul class="Skillbox" data-animate>
+					<div class="active">
 					<li><img src="img/Ai.png" alt="Illustartor"></li>
 					<li><p>Adobe<br>Illustrator</p></li>
 					<li><img src="img/3star.png" alt="3 stars"></li>
+					</div>
 				</ul>
 			</li>
 			<li>
 				<ul class="Skillbox" data-animate>
+					<div class="active">
 					<li><img src="img/Ae.png" alt="After effects"></li>
 					<li><p>Adobe<br>After Effects</p></li>
 					<li><img src="img/4star.png" alt="4 stars"></li>
+					</div>
 				</ul>
 			</li>
 			<li>
 				<ul class="Skillbox" data-animate>
+					<div class="active">
 					<li><img src="img/Figma.png" alt="Figma"></li>
 					<li><p>Figma<br><br></p></li>
 					<li><img src="img/4star.png" alt=" 4 stars"></li>
+					</div>
 				</ul>
 			</li>
 		</ul>
 	</div>
+	<div class="Portfolio">
+		<h1>Portfolio</h1>
+		<div class="active">
+			<img src="img/online-fashion-store.png" alt="online fashion store"  data-animate>
+		</div>
+		<a href="#">Online fashion store - Homepage</a>
+		<div class="active">
+			<img src="img/reebok-store.png" alt="reebok store"  data-animate>
+		</div>
+		<a href="#">Reebok Store - Concept</a>
+		<div class="active">
+			<img src="img/braun.png" alt="braun" data-animate>
+		</div>
+		<a href="#">Braun Landing Page - Concept</a>
+	</div>
+	<footer>
+		<h1>Contacts</h1>
+		<p>Want to know more or just chat?<br> You are welcome!</p>
+		<button class="active">Send massage</button>
+		<ul>
+			<li><div class="active"><img src="img/In.png" alt="in"></div></li>
+			<li><div class="active"><img src="img/Inst.png" alt="inst"></div></li>
+			<li><div class="active"><img src="img/BE.png" alt="be"></div></li>
+			<li><div class="active"><img src="img/WWW.png" alt="WWW"></div></li>
+		</ul>
+		<p class="grey">Like me on LinkedIn, Instagram, Behance, Dribble</p>
+	</footer>
 <script src="script.js"></script>
 </body>
 </html>
